--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+    <meta charset="UTF-8"/>
     <title></title>
 </head>
-<body>
-<h1>
-    Hello Rinat!
+<body style='background: url("photos/test.jpg")'>
+<h1 style="text-align: center;font-size: 50px;font-weight: bold; width: 500px; border-radius: 20px; background-color: rgba(255,255,255,0.6); margin: 300px auto;">
+    Свадебное фото в Саранске!
+    <br>
+    тел. 2-02.69
 </h1>
 </body>
 </html>
